# ecl-grpc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
src/: grpc-client.cpp  grpc-client.hpp  helper.cc  helper.h  main.cpp  main.ecl  main.manifest
